--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "serialize-javascript": "^2.1.2",
     "styled-components": "^4.4.1"
   },
   "scripts": {
